Admin mejorado - About - Home - Loading etc

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/blue-archive.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>El Hada Artesana</title>
+    <meta name="description" content="Artesanía única y diseño contemporáneo. Piezas hechas a mano con materiales naturales. Descubre nuestra colección de joyería y decoración." />
+    <meta name="keywords" content="artesanía, diseño contemporáneo, piezas únicas, joyería artesanal, decoración, materiales naturales, artesanía peruana" />
+    <meta name="author" content="El Hada Artesana" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="El Hada Artesana - Artesanía y Diseño Contemporáneo" />
+    <meta property="og:description" content="Artesanía única y diseño contemporáneo. Piezas hechas a mano con materiales naturales." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_ES" />
+    <title>El Hada Artesana - Artesanía y Diseño Contemporáneo</title>
   </head>
   <body>
     <div id="root"></div>
